--- a/frontend/alltenders.css
+++ b/frontend/alltenders.css
@@ -102,3 +102,11 @@ body {
   border-radius: 0.5rem;
   border: none;
 }
+.tenders-btn{
+  background-color: #40514E;
+  color: #fff;
+  margin: 0.5rem;
+  padding: 0.2rem 0.5rem;
+  border-radius: 0.5rem;
+  border: none;
+} 
